@@ -38,6 +38,9 @@ Example for ping and port test:
    if failed ping responsetime < 50 ms then alert
    if failed port 443 protocol https and responsetime < 50 ms then alert
 
+Fixed: Issue #961: If a service depends on some other service, which is member of the same service group, the
+service group restart would restart the child service twice.
+
 Fixed: Minor memory leak when uptime test is used an monit is reloaded.
 
 
